2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (main):
	Change layout slightly, add a 'forward' key

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (new_button):
	Use an image packed into a button instead of the stock button

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
	Fix landscape orientation, add non-working --position option, change
	--plug option to --xembed

2007-11-06  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
	Add arguments --daemon, --orientation and --plug, set default
	orientation to portrait

2007-11-06  Chris Lord  <chris@openedhand.com>

	* gtk-im/Makefile.am:
	* gtk-im/Makefile.in:
	* gtk-im/gtkimcontextmultipress.c: (mb_im_context_focus_in),
	(mb_im_context_focus_out), (gtk_im_context_multipress_class_init):
	* gtk-im/im-context.c:
	* gtk-im/im-context.h:
	Add focus-in/out to the multi-press input method, remove unused
	im-context.[ch]

2007-11-06  Chris Lord  <chris@openedhand.com>

	* applet/applet.c: (mb_panel_applet_create):
	Fix applet name

	* src/multitap-pad-main.c: (new_button), (invoke_cb), (main):
	Fix remote command event filtering and add backspace/return keys